--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
         </div>
 
         <!-- Login Form -->
-        <form th:action="@{/login}" method="post">
+        <form id="loginForm" th:action="@{/login}" method="post">
 
             <!-- Email Field -->
             <div class="form-floating mb-3">
@@ -72,6 +72,7 @@
         </div>
     </div>
 </div>
+<script th:src="@{/js/JwtOnLogin.js}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
